# console-cli

./: Pipfile  pyproject.toml  setup.cfg  setup.py
scripts/: build.sh
src/console/cli/: __init__.py  __main__.py
src/console/commands/: application.py  cmd.py  command.py  project_creator.py
src/console/config/: cli_config.py  logger.py  open_search.py
src/console/console_app/: cli_app.py  utils.py
src/console/templates/new_project/: .gitignore  Dockerfile  Makefile  Pipfile  docker-compose.yaml  project.yaml
src/console/templates/new_project/.devcontainer/: devcontainer.json  docker-compose.yml
src/console/templates/new_project/docker/: docker-compose.yaml
src/console/templates/new_project/tools/envs/: dev.txt
src/console/templates/new_project/tools/requirements/: dev.txt
