[project]
description = 'console app command line interface'
name = 'console'
version = '0.0.1'

[project.scripts]
console = 'console.cli:main'

[build-system]
requires = [
    'setuptools',
    'wheel',
]

build-backend = 'setuptools.build_meta'

[tool.setuptools]
# use defaults

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.isort]
add_imports = [
    'from __future__ import annotations',
]
atomic = true
force_grid_wrap = 2
force_sort_within_sections = true
profile = 'black'
skip_gitignore = true
line_length = 88

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
remove_unused_variables = true

[tool.flake8]
# configurado no `.pre-commit-config.yaml`
# link: https://github.com/PyCQA/flake8/issues/234 (lamentavel)

[tool.bandit]
exclude_dirs = ['tests']

[tool.autopep8]
aggressive = 3
in-place = true
max_line_length = 100

[tool.mypy]
ignore_missing_imports = true
incremental = true
namespace_packages = true
show_error_codes = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pylint.messages-control]
disable = [
    'eval-used',  # deixa isso com o bandit
    'logging-fstring-interpolation',
    'missing-class-docstring',
    'missing-function-docstring',
    'missing-module-docstring',
    'too-few-public-methods',
    'too-many-arguments',
]
good-names = '"_,cb,con,df,ex,fn,i,it,j,k,np,ns,x"'
max-line-length = 88
reports = 'n'
score = 'n'

[tool.pytest.ini_options]
addopts = '--doctest-modules --disable-pytest-warnings'
