[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = true
package_dir =
    =src

install_requires =
    typer
    typer-cli
    pydantic-settings
    pydantic
    rich
    colorama
    pandas
    elasticsearch
    opensearch-dsl
    emoji
    python-dotenv
    
[options.package_data]
console = py.typed

[options.packages.find]
where = src

exclude =
    devtools
    docker
    examples

[options.entry_points]
console_scripts =
    console = console.cli:main